--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'kotlin'
 apply plugin: 'maven'
 
 repositories {
@@ -8,6 +9,7 @@ repositories {
 
 dependencies {
     compile 'org.musetest:muse-core:0.10'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
 
     testCompile 'org.musetest:muse-core-mocks:1.0+'
     testCompile 'junit:junit:4.12'
@@ -34,6 +36,26 @@ artifacts {
 // declare which packages Muse should scan for extensions
 jar {
     manifest {
-        attributes 'muse-package' : 'com.webperformance.muse.measurements'
+        attributes 'muse-package': 'com.webperformance.muse.com.webperformance.muse.measurements'
+    }
+}
+
+buildscript {
+    ext.kotlin_version = '1.1.50'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
