--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
 
     testCompile 'org.musetest:muse-core-mocks:1.0+'
+    testCompile 'org.musetest:muse-commandline:0.11'  // only for manual testing
     testCompile 'junit:junit:4.12'
 }
 
