--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,7 @@ dependencies {
     compile 'io.github.microutils:kotlin-logging:1.4.6'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
 
-    testCompile 'org.musetest:muse-core-mocks:1.0+'
-    testCompile 'org.musetest:muse-commandline:0.11'  // only for manual testing
+    testCompile 'org.musetest:muse-commandline:0.11'  // only needed for manual testing
     testCompile 'junit:junit:4.12'
 }
 
