update to latest Muse and Kotlin

--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,12 @@ version = 0.3
 group = 'com.webperformance.muse'
 
 dependencies {
-    compile 'org.musetest:muse-core:0.13'
+    compile 'org.musetest:muse-core:0.14'
     compile 'io.github.microutils:kotlin-logging:1.4.6'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0"
     
-    testCompile 'org.musetest:muse-commandline:0.12'  // only needed for manual testing
+    testCompile 'org.musetest:muse-commandline:0.14'  // only needed for manual testing
     testCompile 'junit:junit:4.12'
 }
 
@@ -46,7 +46,7 @@ jar {
 }
 
 buildscript {
-    ext.kotlin_version = '1.2.0'
+    ext.kotlin_version = '1.3.21'
     repositories {
         mavenCentral()
     }
